# decaying_histogram

./: .gitignore  Makefile.am  README.txt  configure.ac
doc/: Makefile  paper.tex  yhpargoil.bib
lib/python/: decaying_histogram.py
scripts/: animate.py  compare_implementations.py  datasets.py  equations.py  histogram.py  roll.py  show_c_histogram.py  show_density.py
src/: Makefile.am  decay_equations.py  decaying_histogram.c  decaying_histogram.h  dhist.c  dhist.h  distance_comparison.cpp  find_detection_windows.py  histogram.py  main.c  main.cpp  profile_malloc.cpp  roll.py  show_KS_density.py  show_KS_timeseries.py  show_density.py  show_timeseries.py
src/fixedpt/: dhist_fixedpt.c  dhist_fixedpt.h  fixedptc.h
src/fixedptc/: dhist_fixedptc.c  dhist_fixedptc.h  fixedptc.h  self_profile_fixedptc.c
tests/: Makefile.am  decaying_histogram_test.cpp  test_dhist.cpp  trace1.txt
